# flood-detection-core

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/flood_detection_core/: __main__.py  config.py  config_old.py  exceptions.py  main.py  types.py  utils.py
src/flood_detection_core/analysis/: basic_cd.py  gen_eda_plots.py  plotting.py
src/flood_detection_core/data/: constants.py  patches.py  utils.py
src/flood_detection_core/data/datasets/: __init__.py  flood_detection.py  flood_event.py  pretrain.py  site_specific.py  site_specific_v2.py
src/flood_detection_core/data/downloaders/: gee_downloader.py  gee_downloader_urban_sar.py  sen1flood11_validator.py
src/flood_detection_core/data/loaders/: base.py  tif.py  urban_sar.py
src/flood_detection_core/data/loaders/datasets/: pretrain.py
src/flood_detection_core/data/metadata/: base.py  sen1flood11.py  urban_sar.py
src/flood_detection_core/data/processing/: augmentation.py  imaging.py  patches.py  split.py  urban_sar_floods_extraction.py  utils.py
src/flood_detection_core/inference/: __init__.py  predict_v2.py
src/flood_detection_core/models/: clvae.py
src/flood_detection_core/pipelines/: __init__.py  eval.py  manager.py  predict.py  pretrain.py  site_specific.py  utils.py
src/flood_detection_core/train/: manager.py  pretrain.py  site_specific.py
src/flood_detection_core/yamls/: data.yaml  data_config.yaml  gee.yaml  gee_download_config.yaml  model_clvae.yaml
src/flood_detection_dl/: __init__.py
yamls/: data.yaml  data_new.yaml  data_sen1flood11.yaml  data_urban_sar.yaml  data_urban_sar_remote.yaml  gee.yaml  gee_urban_sar.yaml  model_clvae.yaml  model_clvae_urban_sar.yaml
