[project]
name = "flood-detection-core"
version = "0.1.0"
description = "Flood Detection Core"
readme = "README.md"
authors = [
    { name = "Truong Hoang", email = "truonghm.work@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "pydantic>=2.11.7",
    "rasterio>=1.4.3",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "setuptools>=78.1.0",
    "earthengine-api>=1.5.9",
    "geemap>=0.35.3",
    "pyyaml>=6.0.2",
    "pydantic-settings>=2.10.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "typer>=0.16.0",
    "torch>=2.7.0",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "flood_detection_core"
module-root = "src"

[project.scripts]
flood_detection_core = "flood_detection_core.__main__:app"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true